nullaway_error_666F5B7F-35EA-4B9E-90AD-F32C79B2153C.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ComponentScanBeanDefinitionParser.java:223: error: [NullAway] passing @Nullable parameter 'ex.getMessage()' where @NonNull is required
							ex.getMessage(), parserContext.extractSource(element), ex.getCause());
							             ^
    (see http://t.uber.com/nullaway )
